fix archive navigation overflow

--- a/src/assets/css/pages/_archive.css
+++ b/src/assets/css/pages/_archive.css
@@ -7,6 +7,10 @@
   .year-navigation {
     list-style-type: none;
     padding: 0;
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    flex-wrap: wrap;
 
     li {
       text-decoration: none;
